Code/latest_log.txt
\n[Thu Apr  7 22:34:08 CDT 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/enriqueohernandez/Dropbox/Escuela-/TEC/8 Semestre/Compiladores/Proyecto/Git/Light-Programming-Language/Code/light_semantic_controller.py", line 6
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
